--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ ul {
     margin: 25px 0 0;
     font-size: 28px;
     font-weight: bold;
-    color: var(--main-color);
+    color: white;
 }
 /* -------------------- End Header -------------------- */
 /* -------------------- Start Navbar -------------------- */
